# traits-registry

./: .gitignore  LICENSE  README.md  registry.json
.github/workflows/: python_tests.yml
examples/: appagent.json  fungible_token.json  nft_collection.json  nft_token.json
js-traits-validator/: index.d.ts  index.js  index.ts  package.json  tsconfig.json  types.d.ts  types.ts
js-traits-validator/schemes/: metadata_schema.json  registry.json
js-traits-validator/scripts/: registry.json  searchSchemes.js
js-traits-validator/tests/: index.test.ts
py-traits-validator/: pyproject.toml
py-traits-validator/src/traitsvalidator/: traits_validator.py
py-traits-validator/tests/: test_registry.py
traits/fungible/: trait.json
traits/named/: trait.json
traits/tech.trait.wallet/nft_collection_listing_image/: trait.json
traits/tech.trait.wallet/nft_token_attributes/: trait.json
traits/tech.trait.wallet/nft_token_cover_image/: trait.json
traits/tech.trait.wallet/nft_token_description/: trait.json
traits/tech.trait.wallet/nft_token_listing_image/: trait.json
traits/tech.trait.wallet/price_feed/: trait.json
traits/tech.trait.wallet/square_icon/: trait.json
