[project]
name = "traitsvalidator"
version = "1.0.0"
authors = [
  { name="Trait Tech PTE LTD", email="info@trait.tech" },
]
description = "Python validator of traits"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2 Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = ["jsonschema == 4.23.0"]


[project.optional-dependencies]
dev = [ "types-jsonschema", "requests", "types-requests", "pydantic", "ruff", "mypy" ]


[project.urls]
Homepage = "https://github.com/traittech/traits-registry"
Issues = "https://github.com/traittech/traits-registry/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "py.typed", "*.pyi"]


[tool.ruff]
target-version = "py312"
line-length = 120
fix = false

exclude = ["env", ".env", ".venv", "build"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "C90",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "COM",
    "DTZ",
    "EM",
    "FA",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    "PL",
    "TRY",
    "RUF",
]
ignore = ["COM812", "UP040"]

fixable = ["ALL"]


[tool.mypy]
python_version = "3.12"
exclude = ["env", ".env", ".venv", "build"]
